--- a/css/style.css
+++ b/css/style.css
@@ -6,41 +6,19 @@ h1{
   color:#1E2F78;
 }
 .introduction{
-  text-align: left;
   font-family: sans-serif;
-  line-height: 20px
-}
-ul{
-  line-height: 30px;
   text-align: center;
-}
-h2{
-  text-align: center;
-  font-family: sans-serif;
-}
-h3{
-  text-align: left;
-  font-style: normal;
-  font-family: sans-serif;
-  text-transform: full-width;
-  text-transform: uppercase;
-}
-.box{
-  padding: 3px;
-  margin: 2px;
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
-
 }
 img{
+  float: left;
   height: auto;
-  width:20%;
+  width: 20%
 }
-h4{
-  text-align: left;
+h2{
+  font-family: sans-serif;
+  text-align: center;
 }
-li{
-  text-align: left;
+.box{
+  border: 2px solid black;
+
 }
